Fix y overflow in detail sidebar

--- a/app/widgets/detail-sidebar.scss
+++ b/app/widgets/detail-sidebar.scss
@@ -8,6 +8,15 @@
   $buttoncolor: #657faa;
 
 
+
+  .tab-content {
+    padding-top: 1em;
+    height: calc(100vh - 172px);
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+
   .document-card .card-block {
     overflow: auto;
   }
@@ -18,7 +27,7 @@
 
 
   .card-block {
-    padding-top: 9px !important;
+     padding-bottom: 0px !important;
   }
 
 
